--- a/New_대시보드.html
+++ b/New_대시보드.html
@@ -603,7 +603,9 @@
                       <div class="com-sarch-type01 comShadow mt15">
                         <h2>Activity 완료 및 지연 건수 (소분과별)</h2>
                         <div class="graph2">
+                        <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. -->
 
+                        <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. eee -->
                         </div>
                       </div>
                       <!-- Activity 완료 및 지연 건수 (소분과별) eee -->
@@ -1251,6 +1253,7 @@
                           tablinks.forEach((el) => {
                             el.classList.remove("active");
                           });
+                          
                           // 선택된 탭 내용 보여줌
                           document.getElementById(tabName).classList.add("show");
 
