--- a/New_대시보드.html
+++ b/New_대시보드.html
@@ -18,7 +18,12 @@
   <link rel="stylesheet" type="text/css" href="css/jquery.fancybox-1.3.4.css" />
   <link rel="stylesheet" type="text/css" href="css/theme/blue/common_ko_darknavy.css?20220906162652" />
   <link rel="stylesheet" type="text/css" href="css/theme/blue/conference.css" />
+
+  <!-- 20230425 추가 css -->
+  <link rel="stylesheet" href="css/theme/blue/new2023.css" />
   <link rel="stylesheet" href="css/theme/blue/common_ko_darknavy2.css" />
+  <!-- 20230425 추가 css -->
+
   <!-- <link rel="stylesheet" type="text/css" href="css/common.vue.css?20220906162652">
   <link rel="stylesheet" type="text/css" href="css/custom_design.css?20220906162652">
   <link rel="stylesheet" type="text/css" href="css/jquery.minicolors.css"> -->
@@ -456,7 +461,7 @@
                                   <div class="bar"></div>
                                   <div class="comCheckBox">
                                     <input type="checkbox" class="chkInput" id="checkbox4" name="checkbox">
-                                    <label for="checkbox4" class="chkLabel cRed fwB">Critical</label>
+                                    <label for="checkbox4" class="chkLabel fwB">Critical</label>
                                   </div>
                                 </div>
                               </dd>
@@ -603,9 +608,9 @@
                       <div class="com-sarch-type01 comShadow mt15">
                         <h2>Activity 완료 및 지연 건수 (소분과별)</h2>
                         <div class="graph2">
-                        <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. -->
+                          <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. -->
 
-                        <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. eee -->
+                          <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. eee -->
                         </div>
                       </div>
                       <!-- Activity 완료 및 지연 건수 (소분과별) eee -->
@@ -633,8 +638,8 @@
                               </colgroup>
                               <tr>
                                 <th>Activity 명</th>
-                                <th>시작일</th>
-                                <th>종료일</th>
+                                <th>계획 시작일</th>
+                                <th>계획 종료일</th>
                                 <th>완료일</th>
                                 <th>담당</th>
                                 <th>완료여부</th>
@@ -739,8 +744,8 @@
                               </colgroup>
                               <tr>
                                 <th>Activity 명</th>
-                                <th>시작일</th>
-                                <th>종료일</th>
+                                <th>계획 시작일</th>
+                                <th>계획 종료일</th>
                                 <th>완료일</th>
                                 <th>담당</th>
                                 <th>완료여부</th>
@@ -844,55 +849,67 @@
                                   </colgroup>
                                   <tr>
                                     <th>Activity 명</th>
-                                    <th>시작일</th>
-                                    <th>종료일</th>
+                                    <th>지연일</th>
+                                    <th>담당</th>
                                   </tr>
                                   <tr>
                                     <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
                                     </td>
-                                    <td>2022.10.24
+                                    <td>
+                                      30일
                                     </td>
-                                    <td>2022.10.24
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
-                                    </td>
-                                    <td>2022.10.24
-                                    </td>
-                                    <td>2022.10.24
+                                    <td>
+                                      홍길동
                                     </td>
                                   </tr>
                                   <tr>
                                     <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
                                     </td>
-                                    <td>2022.10.24
+                                    <td>
+                                      30일
                                     </td>
-                                    <td>2022.10.24
+                                    <td>
+                                      홍길동
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
+                                    </td>
+                                    <td>
+                                      30일
+                                    </td>
+                                    <td>
+                                      홍길동
                                     </td>
                                   </tr>
                                   <tr>
                                     <td class="left"><a href="#">인프라 기술표준 개정 (현지법규 반영)</a>
                                     </td>
-                                    <td>2022.10.24
+                                    <td>
+                                      30일
                                     </td>
-                                    <td>2022.10.24
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="left"><a href="#">인프라 기술표준 개정 (현지법규 반영)</a>
-                                    </td>
-                                    <td>2022.10.24
-                                    </td>
-                                    <td>2022.10.24
+                                    <td>
+                                      홍길동
                                     </td>
                                   </tr>
                                   <tr>
                                     <td class="left"><a href="#">인프라 기술표준 개정 (현지법규 반영)</a>
                                     </td>
-                                    <td>2022.10.24
+                                    <td>
+                                      30일
                                     </td>
-                                    <td>2022.10.24
+                                    <td>
+                                      홍길동
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="left"><a href="#">인프라 기술표준 개정 (현지법규 반영)</a>
+                                    </td>
+                                    <td>
+                                      30일
+                                    </td>
+                                    <td>
+                                      홍길동
                                     </td>
                                   </tr>
                                 </table>
@@ -921,55 +938,55 @@
                                   </colgroup>
                                   <tr>
                                     <th>Activity 명</th>
-                                    <th>시작일</th>
-                                    <th>종료일</th>
+                                    <th>진행상태</th>
+                                    <th>담당</th></th>
                                   </tr>
                                   <tr>
                                     <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
                                     </td>
-                                    <td>2022.10.24
+                                    <td>진행중
                                     </td>
-                                    <td>2022.10.24
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
-                                    </td>
-                                    <td>2022.10.24
-                                    </td>
-                                    <td>2022.10.24
+                                    <td>홍길동
                                     </td>
                                   </tr>
                                   <tr>
                                     <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
                                     </td>
-                                    <td>2022.10.24
+                                    <td>진행중
                                     </td>
-                                    <td>2022.10.24
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="left"><a href="#">인프라 기술표준 개정 (현지법규 반영)</a>
-                                    </td>
-                                    <td>2022.10.24
-                                    </td>
-                                    <td>2022.10.24
+                                    <td>홍길동
                                     </td>
                                   </tr>
                                   <tr>
-                                    <td class="left"><a href="#">인프라 기술표준 개정 (현지법규 반영)</a>
+                                    <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
                                     </td>
-                                    <td>2022.10.24
+                                    <td>진행중
                                     </td>
-                                    <td>2022.10.24
+                                    <td>홍길동
                                     </td>
                                   </tr>
                                   <tr>
-                                    <td class="left"><a href="#">인프라 기술표준 개정 (현지법규 반영)</a>
+                                    <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
                                     </td>
-                                    <td>2022.10.24
+                                    <td>진행중
                                     </td>
-                                    <td>2022.10.24
+                                    <td>홍길동
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
+                                    </td>
+                                    <td>진행중
+                                    </td>
+                                    <td>홍길동
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
+                                    </td>
+                                    <td>진행중
+                                    </td>
+                                    <td>홍길동
                                     </td>
                                   </tr>
                                 </table>
@@ -1253,7 +1270,7 @@
                           tablinks.forEach((el) => {
                             el.classList.remove("active");
                           });
-                          
+
                           // 선택된 탭 내용 보여줌
                           document.getElementById(tabName).classList.add("show");
 
