--- a/GSOP_NEW_1004_모달팝업.html
+++ b/GSOP_NEW_1004_모달팝업.html
@@ -1308,7 +1308,7 @@
                     <div class="tabInfo">
                         <div class="ref">
                         <div id="tab1">
-                            <ul class="comStep flex">
+                            <ul class="comStep flex barWd">
                             <!-- TODO li.on 일때 진행바 진행 -->
                             <li class="on">
                                 <div class="box">
