--- a/GSOP_NEW_1008_모달팝업.html
+++ b/GSOP_NEW_1008_모달팝업.html
@@ -1292,7 +1292,7 @@
         <div class="cd-popup is-visible popupWrap">
             <div class="cd-popup-container">
               <div class="had-tit">
-                설비 주요 KPI
+                인사 주요 KPI
               </div>
 
               <!-- 팝업닫기 -->
@@ -1301,132 +1301,81 @@
               </a>
               <div class="contents">
                 <!-- 팝업내용 -->
-                <!-- 설비 주요 KPI -->
-                <div class="bg-info fixing">
+                <!-- 인사 주요 KPI -->
+                <div class="bg-info graphCon">
                   <div class="com-sarch-type01 com-had-type02 comShadow rBlack mt5">
-                    <p class="tit frtit">전체 진행 현황</p>
+                    <p class="tit">주요지표1</p>
                     <div class="tabInfo">
-                        <div class="ref">
+                      <div class="ref">
                         <div id="tab1">
-                            <ul class="comStep flex bar">
-                            <!-- TODO li.on 일때 진행바 진행 -->
+                            <ul class="comStep flex">
                             <li class="on">
-                                <div class="box">
-                                <p class="date">100%</p>
-                                <span class="step">
-                                    01
-                                </span>
-                                <p class="txt">
-                                    사양선정 심의
-                                </p>
-                                </div>
-                                <div class="progressBar">
-                                </div>
+                            Seed인력
                             </li>
                             <li>
-                                <div class="box">
-                                <p class="date">50%</p>
-                                <span class="step">
-                                    02
-                                </span>
-                                <p class="txt">
-                                    사양등록
-                                </p>
-                                </div>
-                                <div class="progressBar"></div>
+                            법인 총원
                             </li>
                             <li>
-                                <div class="box">
-                                <p class="date">10%</p>
-                                <span class="step">
-                                    03
-                                </span>
-                                <p class="txt">
-                                    입고전 <br />
-                                    설비검수
-                                </p>
-                                </div>
-                                <div class="progressBar"></div>
-                            </li>
-                            <li>
-                                <div class="box">
-                                <p class="date">10%</p>
-                                <span class="step">
-                                    04
-                                </span>
-                                <p class="txt">
-                                    설비반입
-                                </p>
-                                </div>
-                                <div class="progressBar"></div>
-                            </li>
-                            <li>
-                                <div class="box">
-                                <p class="date">-</p>
-                                <span class="step">
-                                    05
-                                </span>
-                                <p class="txt">
-                                    UT/전기<br />  
-                                    Turnon
-                                </p>
-                                </div>
-                                <div class="progressBar"></div>
-                            </li>
-                            <li>
-                                <div class="box">
-                                <p class="date">-</p>
-                                <span class="step">
-                                    06
-                                </span>
-                                <p class="txt">
-                                    Hard Ware
-                                    Set-up
-                                </p>
-                                </div>
-                                <div class="progressBar"></div>
-                            </li>
-                            <li>
-                                <div class="box">
-                                <p class="date">-</p>
-                                <span class="step">
-                                    07
-                                </span>
-                                <p class="txt">
-                                    안전환경
-                                    인증
-                                </p>
-                                </div>
-                                <div class="progressBar"></div>
-                            </li>
-                            <li class="last">
-                                <div class="box">
-                                <p class="date">-</p>
-                                <span class="step">
-                                    08
-                                </span>
-                                <p class="txt">
-                                    설비
-                                    QUAL
-                                </p>
-                                </div>
-                                <div class="progressBar"></div>
+                            교육
                             </li>
                           </ul>
                         </div>
                       </div>
-                    </div>
-                      <!-- 설비 QUAL 진행현황 -->
-                      <div class="com-sarch-type01 comShadow mt60 mr0">
-                        <p class="tit sectit">설비 QUAL 진행현황</p>
+                      <!-- graph -->
+                      <div class="com-sarch-type01 comShadow mt60 ml30">
                         <div class="graph2">
                           <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. -->
 
                           <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. eee -->
                         </div>
-                        <p class="bttit">※ 공정별 설비 Checklist NG 항목수 ACE 시스템 바로가기 ☞ <a href="#">클릭</a></p>
                       </div>
-                      <!-- 설비 QUAL 진행현황 eee -->
+                    </div>
+                    <div class="tabInfo">
+                      <div class="ref">
+                        <div id="tab2">
+                            <ul class="comStep flex">
+                            <li>
+                            Seed인력
+                            </li>
+                            <li class="on">
+                            법인 총원
+                            </li>
+                            <li>
+                            교육
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                      <!-- graph -->
+                      <div class="com-sarch-type01 comShadow mt60 ml30">
+                        <div class="graph2">
+                          <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. -->
+
+                          <!-- 그래프 들어갈 공간 이 사이에 넣어주세요. eee -->
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tabInfo">
+                      <div class="ref">
+                        <div id="tab3">
+                            <ul class="comStep flex">
+                            <li>
+                            Seed인력
+                            </li>
+                            <li>
+                            법인 총원
+                            </li>
+                            <li class="on">
+                            교육
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                      <!-- table -->
+                      <div class="com-sarch-type01 comShadow mt60 ml30">
+                        <!-- table 넣는 곳 -->
+                      </div>
+                    </div>
                 </div>
               </div>
               <ul class="c-btn-set mt8">
