edit : 1차 작업물 컨펌

--- a/GSOP_NEW_1003_대시보드.html
+++ b/GSOP_NEW_1003_대시보드.html
@@ -694,6 +694,10 @@
                           <p class="tit">항목별 계획比 실적</p>
                           <div class="pop-tbl-type01">
                             <table>
+                              <colgroup>
+                                <col width="100px">
+                                <col width="100px">
+                              </colgroup>
                               <thead>
                                 <tr>
                                   <th colspan="2"></th>
