--- a/GSOP_NEW_1007_대시보드.html
+++ b/GSOP_NEW_1007_대시보드.html
@@ -681,7 +681,7 @@
                       </div>
                         <!-- 법인 총원 -->
                         <div
-                        class="com-bg-info bg-fff bd-full bg-info com-had-type02 processTable flexbl tlbColor"
+                        class="com-bg-info bg-fff bd-full bg-info com-had-type02 processTable flexbl tlbColor pt11"
                         >
                         <p class="tit">법인 총원</p>
                         <div class="pop-tbl-type01">
@@ -751,7 +751,7 @@
                     </div>
                     <!-- 교육 계획 및 진척 -->
                     <div
-                      class="com-bg-info bg-fff bd-full bg-info com-had-type02 processTable flexbl tlbColor tlbPd"
+                      class="com-bg-info bg-fff bd-full bg-info com-had-type02 processTable flexbl tlbColor tlbPd pt39"
                     >
                     <p class="tit">교육 계획 및 진척</p>
                     <div class="pop-tbl-type01">
