--- a/New_대시보드.html
+++ b/New_대시보드.html
@@ -939,7 +939,8 @@
                                   <tr>
                                     <th>Activity 명</th>
                                     <th>진행상태</th>
-                                    <th>담당</th></th>
+                                    <th>담당</th>
+                                    </th>
                                   </tr>
                                   <tr>
                                     <td class="left"><a href="#">글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트글자테스트</a>
@@ -1001,10 +1002,19 @@
                       <div class="com-sarch-type01 comShadow rBlack mt15">
                         <div class="header flex aic jcb">
                           <h2>주요 KPI</h2>
-                          <div class="tabMenu flex gap8">
-                            <button class="tablinks active" onclick="openTab(event, 'tab1')">건설</button>
-                            <button class="tablinks" onclick="openTab(event, 'tab2')">설비</button>
-                            <button class="tablinks" onclick="openTab(event, 'tab3')">인사</button>
+                          <div class="flex aic gap32">
+                            <div class="kpiLink flex gap7">
+                              <p>※상세 KPI 바로가기</p>
+                              <span>
+                                <img src="../images/theme/blue/bg-arr2.png" alt="">
+                              </span>
+                              <a href="#">클릭</a>
+                            </div>
+                            <div class="tabMenu flex gap8">
+                              <button class="tablinks active" onclick="openTab(event, 'tab1')">건설</button>
+                              <button class="tablinks" onclick="openTab(event, 'tab2')">설비</button>
+                              <button class="tablinks" onclick="openTab(event, 'tab3')">인사</button>
+                            </div>
                           </div>
                         </div>
                         <div class="tabInfo">
